# near-security-pocs

./: .gitignore  Cargo.toml
contracts/access-control/: Cargo.toml
contracts/access-control/src/: lib.rs
contracts/denial-of-service/: Cargo.toml
contracts/denial-of-service/src/: lib.rs
contracts/exploit/: Cargo.toml
contracts/exploit/src/: lib.rs
contracts/race-condition/deposit/src/: lib.rs
contracts/storage-key-collisions/: Cargo.toml  README.md
contracts/storage-key-collisions/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: access_control.rs  denial_of_service.rs  lib.rs  race_condition.rs  storage_collisions.rs
res/: access_control.wasm  denial_of_service.wasm  deposit_contract.wasm  exploit.wasm  staking.wasm  storage_key_collisions.wasm
scripts/: build_all.sh
